--- a/index.html
+++ b/index.html
@@ -308,6 +308,7 @@
     <script src="scripts/3-ui-managers.js"></script>
     <script src="scripts/4-crew-data.js"></script>
     <script src="scripts/5-messages-data.js"></script>
+    <script src="scripts/7-events-data.js"></script>
     <script src="scripts/6-main.js"></script>
 </body>
 </html>
