Show Genesis introduction before initializing mission

--- a/index.html
+++ b/index.html
@@ -26,6 +26,17 @@
         </div>
     </div>
 
+    <!-- Introducción Proyecto Génesis -->
+    <div id="intro-overlay" class="intro-overlay" style="display: none;">
+        <div class="intro-window">
+            <div class="logbook-intro">
+                <h2>PROYECTO GÉNESIS</h2>
+                <pre id="intro-text-content"></pre>
+                <button class="intro-mission-btn" onclick="startMissionFromIntro()">INICIAR MISIÓN</button>
+            </div>
+        </div>
+    </div>
+
     <!-- Escritorio Principal -->
     <div id="desktop" class="desktop" style="display: none;">
         <!-- Barra de Título Principal -->
