--- a/index.html
+++ b/index.html
@@ -61,6 +61,45 @@
             </div>
         </div>
 
+        <!-- Barra de Recursos Permanente -->
+        <div class="resource-strip" id="resource-strip">
+            <div class="resource-chip">
+                <span class="resource-icon">⚡</span>
+                <span class="resource-label">Energía</span>
+                <span class="resource-value" id="resource-strip-energy">0/0</span>
+            </div>
+            <div class="resource-chip">
+                <span class="resource-icon">🍲</span>
+                <span class="resource-label">Alimentos</span>
+                <span class="resource-value" id="resource-strip-food">0/0</span>
+            </div>
+            <div class="resource-chip">
+                <span class="resource-icon">💧</span>
+                <span class="resource-label">Agua</span>
+                <span class="resource-value" id="resource-strip-water">0/0</span>
+            </div>
+            <div class="resource-chip">
+                <span class="resource-icon">🌬️</span>
+                <span class="resource-label">Oxígeno</span>
+                <span class="resource-value" id="resource-strip-oxygen">0/0</span>
+            </div>
+            <div class="resource-chip">
+                <span class="resource-icon">💊</span>
+                <span class="resource-label">Medicinas</span>
+                <span class="resource-value" id="resource-strip-medicine">0/0</span>
+            </div>
+            <div class="resource-chip">
+                <span class="resource-icon">💾</span>
+                <span class="resource-label">Datos</span>
+                <span class="resource-value" id="resource-strip-data">0/0</span>
+            </div>
+            <div class="resource-chip">
+                <span class="resource-icon">⛽</span>
+                <span class="resource-label">Combustible</span>
+                <span class="resource-value" id="resource-strip-fuel">0/0</span>
+            </div>
+        </div>
+
         <!-- Área Principal del Escritorio -->
         <div class="desktop-main-area">
             <!-- Iconos del Escritorio -->
